More implementation of the Vector API through rest (and swagger docs)
